--- a/views/index.jade
+++ b/views/index.jade
@@ -12,4 +12,4 @@ block content
     p Just a quick note, there isn't really an easy way to undo this.
 
 block javascript
-  script(src='/app.js')
+  script(src='/bundle.js')
